--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -18,6 +18,14 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Terran.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Terran.h" />
+    <ClInclude Include="Vallue.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -126,19 +134,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Hammer.cpp" />
-    <ClCompile Include="Knife.cpp" />
-    <ClCompile Include="Knuckles.cpp" />
-    <ClCompile Include="Program.cpp" />
-    <ClCompile Include="Weapon.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Hammer.h" />
-    <ClInclude Include="Knife.h" />
-    <ClInclude Include="Knuckles.h" />
-    <ClInclude Include="Weapon.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
