--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -19,12 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Banana.cpp" />
+    <ClCompile Include="Fruit.cpp" />
     <ClCompile Include="Program.cpp" />
-    <ClCompile Include="Terran.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Terran.h" />
-    <ClInclude Include="Vallue.h" />
+    <ClInclude Include="Banana.h" />
+    <ClInclude Include="Fruit.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
